2005-06-24  Don Porter  <dgp@users.sourceforge.net>

	* library/auto.tcl:     Make file safe to re-[source] without
        destroying registered auto_mkindex_parser hooks.

2005-06-23  Kevin Kenny  <kennykb@acm.org>

	* win/tclWinChan.c: More rewriting of __asm__ blocks that
	* win/tclWinFCmd.c: implement SEH in GCC, because mingw's
	gcc 3.4.2 is not as forgiving of violations committed by
	the old code and caused panics. [Bug #1225957]
	
2005-06-23  Daniel Steffen  <das@users.sourceforge.net>

	* tools/tcltk-man2html.tcl: fixed useversion glob pattern to accept
	multi-digit patchlevels.
	
2005-06-22  Don Porter  <dgp@users.sourceforge.net>

	* win/tclWinFile.c: Potential buffer overflow.  [Bug 1225571]
        Thanks to Pat Thoyts for discovery and fix.

2005-06-22  Kevin Kenny <kennykb@acm.org>

	* generic/tclInt.h:    			    Changed the finalization
	* generic/tclEvent.c (Tcl_Finalize):        logic to defer the
	* generic/tclIO.c (TclFinalizeIOSubsystem): shutdown of the pipe
	* unix/tclUnixPipe.c (TclFinalizePipes):    management until after
	* win/tclWinPipe.c (TclFinalizePipes):      all channels have been
	    closed, in order to avoid a situation where the Windows
	    PipeCloseProc2 would re-establish the exit handler after
	    exit handlers had already run, corrupting the heap.
	    [Bug #1225727]
	Also corrected a potential read of uninitialized memory in
	PipeClose2Proc [Bug #1225044]
	
2005-06-21  Andreas Kupries <andreask@activestate.com>

	* generic/tclInt.h: Followup to change made on 2005-06-18 by
	  Daniel Steffen. There are compilers (*) who error out on the
	  redefinition of WORDS_BIGENDIAN. We have to undef the previous
	  definition (on the command line) first to make this
	  acceptable. (*): AIX native.

2005-06-21  Kevin B. Kenny  <kennykb@acm.org>

	* generic/tclFileName.c: Changed [file split] and [file join]
	to treat Windows drive letters similarly to ~ syntax and make
	sure that they appear with "./" in front when they are in