@@ -66,17 +66,11 @@ typedef struct HandleStruct {
 } HandleStruct;
 
 
-/*
- * Static routines in this file:
- */
-
-static void	PreserveExitProc _ANSI_ARGS_((ClientData clientData));
-
 
 /*
  *----------------------------------------------------------------------
  *
- * PreserveExitProc --
+ * TclFinalizePreserve --
  *
  *	Called during exit processing to clean up the reference array.
  *
@@ -90,9 +84,8 @@ static void	PreserveExitProc _ANSI_ARGS_((ClientData clientData));
  */
 
 	/* ARGSUSED */
-static void
-PreserveExitProc(clientData)
-    ClientData clientData;		/* NULL -Unused. */
+void
+TclFinalizePreserve()
 {
     Tcl_MutexLock(&preserveMutex);
     if (spaceAvl != 0) {
@@ -151,8 +144,6 @@ Tcl_Preserve(clientData)
 
     if (inUse == spaceAvl) {
 	if (spaceAvl == 0) {
-            Tcl_CreateExitHandler((Tcl_ExitProc *) PreserveExitProc,
-                    (ClientData) NULL);
 	    refArray = (Reference *) ckalloc((unsigned)
 		    (INITIAL_SIZE*sizeof(Reference)));
 	    spaceAvl = INITIAL_SIZE;
