@@ -1,3 +1,13 @@
+2004-06-24  Kevin Kenny  <kennykb@acm.org>
+	
+	* generic/tclEvent.c (Tcl_Finalize):
+	* generic/tclInt.h:
+	* generic/tclPreserve.c (TclFinalizePreserve): Changed the
+	finalization logic so that Tcl_Preserve finalizes after exit
+	handlers run; a lot of code called from Tk's exit handlers
+	presumes tha Tcl_Preserve will still work even from an exit
+	handler.
+	
 2005-06-24  Don Porter  <dgp@users.sourceforge.net>
 
 	* library/auto.tcl:     Make file safe to re-[source] without
